--- a/Weather/app/src/main/res/values/strings.xml
+++ b/Weather/app/src/main/res/values/strings.xml
@@ -7,4 +7,19 @@
     <string name="view_navigatoin_open">Open</string>
     <string name="view_navigatoin_close">Close</string>
 
+    <!-- Put your own APP ID here -->
+    <string name="open_weather_maps_app_id">d377ee099072dbcca1beedc79e17f374</string>
+
+    <string name="weather_sunny">&#xf00d;</string>
+    <string name="weather_clear_night">&#xf02e;</string>
+
+    <string name="weather_foggy">&#xf014;</string>
+    <string name="weather_cloudy">&#xf013;</string>
+    <string name="weather_rainy">&#xf019;</string>
+    <string name="weather_snowy">&#xf01b;</string>
+    <string name="weather_thunder">&#xf01e;</string>
+    <string name="weather_drizzle">&#xf01c;</string>
+
+    <string name="place_not_found">Sorry, no weather data found.</string>
+
 </resources>
